--- a/style.css
+++ b/style.css
@@ -2,27 +2,17 @@
 
 body
 {
-    background-color: #4E6766;
-    color: #5AB1BB;
+    background-color: #E5E7E6;
+    color: #B80C09;
 }
 
 form {
     border: 3px solid #00A5CF;
 }
 
-/* Full-width inputs */
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #25A18E;
-    box-sizing: border-box;
-    background-color: #00A5CF;
-    color: #7AE582;
-}
+
 a {
-    color: #A5C882;
+    color: #6B2B06;
 }
 
 /* Set a style for all buttons */
@@ -40,36 +30,25 @@ button {
 button:hover {
     opacity: 0.8;
 }
-/* Add padding to containers */
-.container {
-    padding: 16px;
-}
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-    span.psw {
-        display: block;
-        float: none;
-    }
 
-}
 
 .header {
     padding: 10px;
     text-align: center;
-    background: #A5C882;
-    color: #F7DD72;
+    background: #B7B5B3;
+    color: #141301;
     font-size: 30px;
 }
 
 hr
 {
     border-color: #2a9d8f;
-    border: 5px solid #1E152A;
+    border: 5px solid #BFC0C0;
     border-radius: 5px;
 }
 .navigationbar
 {
     line-height: 0.25;
-
+    color: #6B2B06;
 
 }
