--- a/Games/style.css
+++ b/Games/style.css
@@ -96,3 +96,11 @@ header li a {
     padding: 14px 16px;
     text-decoration: none;
 }
+
+/*header li a:hover:not(.active) {
+    background-color: #111;
+}
+
+header .active {
+    background-color: #04AA6D;
+}*/
