--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ article {
     padding: 20px;
     width: 70%;
 
-    height: 3000px; /* only for demonstration, should be removed */
+    /*height: 3000px; /* only for demonstration, should be removed */
     position: relative;
     left: 30px;
     border: 3px solid #404E4D;
